lhl merge with xww

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       src="%PUBLIC_URL%/%REACT_APP_CONFIG%"
     ></script>
 
-    <title>OHIF Viewer</title>
+    <title>Ocean's Smart Viewer</title>
 
     <!-- WEB FONTS -->
     <link
